k8s/brand-kevinryan-io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brand-kevinryan-io
  namespace: brand-kevinryan-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brand-kevinryan-io
  template:
    metadata:
      labels:
        app: brand-kevinryan-io
    spec:
      containers:
        - name: brand-kevinryan-io
          image: kevinryanacr.azurecr.io/brand-kevinryan-io:37d71f8
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 8Mi
            limits:
              cpu: 50m
              memory: 32Mi
